# MarketTrackingSystem

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  work.md
.github/workflows/: weekly-report.yml
ci/: tests.yml
reports/: history.csv
reports/weekly/: 2026-06-18.md  2026-06-26.md
src/market_tracking/: __init__.py  calendar.py  cli.py  config.py  history.py  metrics.py  models.py  report.py  sources.py  stockanalysis.py  validate.py  yahoo.py
tests/: test_calendar.py  test_history.py  test_metrics.py  test_report.py  test_stockanalysis.py  test_validate.py  test_yahoo.py
