[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-tracking"
version = "0.1.0"
description = "Small weekly Yahoo Finance market tracking report generator."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["finance", "yahoo-finance", "market-tracking", "weekly-report"]

[[project.authors]]
name = "William Gao"

[project.urls]
Homepage = "https://github.com/PeidongGao/MarketTrackingSystem"
Repository = "https://github.com/PeidongGao/MarketTrackingSystem"

[project.scripts]
market-tracking = "market_tracking.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
